--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -6,10 +6,16 @@
     text-align: center;
     color: white;
 }
+.menu2{
+    width: 100%;
+    height: 50px;
+    background-color: rgb(74, 74, 233);
+    text-align: center;
+    color: white;
+}
 nav a{
     color: white;
     line-height: 40px;
-    font-variant: small-caps;
     text-decoration: none;
     margin:0 10px;
 }
@@ -35,7 +41,7 @@ article{
 aside{
     width: 60%;
     height: 500px;
-    background-color: gray;
+    background-color: rgb(193, 225, 247);
     float: left;
 }
 footer{
@@ -52,4 +58,17 @@ footer{
 body{
     padding:0px;
     margin:0px;
+}
+.tt1 > img {
+    float: left;
+}
+.tt1 > a :hover{
+    color: rgb(48, 44, 47);
+    text-decoration: underline;
+}
+.tt2 > img {
+    float: left;
+}
+.tt3 > img {
+    float: left;
 }
